--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 p {
-    font-family: "Verdana", Geneva, sans-serif; !important;
+    font-family: "Verdana", Geneva, sans-serif;
     white-space: pre-line;
 }
 
